// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndividualStudentResponses component should render for a post-test 1`] = `
<IndividualStudentResponses
  location={
    Object {
      "search": "",
    }
  }
  match={
    Object {
      "params": Object {
        "activityId": 0,
        "classroomId": 6,
      },
    }
  }
  mobileNavigation={<span />}
  passedConceptResults={
    Object {
      "post": Object {
        "questions": Array [
          Object {
            "answer": "She doesn't want to go swimming.",
            "concepts": Array [
              Object {
                "answer": "She doesn't want to go swimming.",
                "attempt": 1,
                "correct": true,
                "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Doesn't, Don't)",
                "id": 450,
                "lastFeedback": null,
                "name": "Subject Verb Agreement",
              },
            ],
            "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Doesn't, Don't)",
            "prompt": "She ___ want to go swimming.",
            "question_number": 1,
            "score": 100,
          },
          Object {
            "answer": "The students in the class read the book.",
            "concepts": Array [
              Object {
                "answer": "The students in the class read the book.",
                "attempt": 1,
                "correct": true,
                "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Reads, Read)",
                "id": 450,
                "lastFeedback": null,
                "name": "Subject Verb Agreement",
              },
            ],
            "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Reads, Read)",
            "prompt": "The students in the class ___ the book.",
            "question_number": 2,
            "score": 100,
          },
          Object {
            "answer": "The buildings in Toronto are beautiful.",
            "concepts": Array [
              Object {
                "answer": "The buildings in Toronto are beautiful.",
                "attempt": 1,
                "correct": true,
                "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Are, Is)",
                "id": 450,
                "lastFeedback": null,
                "name": "Subject Verb Agreement",
              },
            ],
            "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Are, Is)",
            "prompt": "The buildings in Toronto ___ beautiful.",
            "question_number": 3,
            "score": 100,
          },
          Object {
            "answer": "We'll play soccer with your brother while you're walking the dog.",
            "concepts": Array [
              Object {
                "answer": "We'll play soccer with your brother while you're walking the dog.",
                "attempt": 1,
                "correct": true,
                "directions": "Choose which word fits best in each blank. You may use the same word twice. (You're, Your)",
                "id": 673,
                "lastFeedback": null,
                "name": "Commonly Confused Words",
              },
            ],
            "directions": "Choose which word fits best in each blank. You may use the same word twice. (You're, Your)",
            "prompt": "We’ll play soccer with ___ brother while ___ walking the dog.",
            "question_number": 4,
            "score": 100,
          },
          Object {
            "answer": "The swimmers hold their breath when they're under water during the competition.",
            "concepts": Array [
              Object {
                "answer": "The swimmers hold their breath when they're under water during the competition.",
                "attempt": 1,
                "correct": true,
                "directions": "Choose which word fits best in each blank. You may use the same word twice. (They're, There, Their)",
                "id": 673,
                "lastFeedback": null,
                "name": "Commonly Confused Words",
              },
            ],
            "directions": "Choose which word fits best in each blank. You may use the same word twice. (They're, There, Their)",
            "prompt": "The swimmers hold ___ breath when ___ under water during the competition.",
            "question_number": 5,
            "score": 100,
          },
          Object {
            "answer": "Swimming is harder without goggles than with them.",
            "concepts": Array [
              Object {
                "answer": "Swimming is harder without goggles than with them.",
                "attempt": 1,
                "correct": true,
                "directions": "Fill in the blank with the correct word or words. (More harder, More hard, Hardest, Harder)",
                "id": 83,
                "lastFeedback": null,
                "name": "Comparative Adjectives",
              },
            ],
            "directions": "Fill in the blank with the correct word or words. (More harder, More hard, Hardest, Harder)",
            "prompt": "Swimming is ___ without goggles than with them.",
            "question_number": 6,
            "score": 100,
          },
          Object {
            "answer": "Grass grows taller in the summer than in the winter.",
            "concepts": Array [
              Object {
                "answer": "Grass grows taller in the summer than in the winter.",
                "attempt": 1,
                "correct": true,
                "directions": "Fill in the blank with the correct word or words. (More taller, More tall, Tallest, Taller)",
                "id": 83,
                "lastFeedback": null,
                "name": "Comparative Adjectives",
              },
            ],
            "directions": "Fill in the blank with the correct word or words. (More taller, More tall, Tallest, Taller)",
            "prompt": "Grass grows ___ in the summer than in the winter.",
            "question_number": 7,
            "score": 100,
          },
          Object {
            "answer": "The city's best restaurant opened twenty years ago",
            "concepts": Array [
              Object {
                "answer": "The city's best restaurant opened twenty years ago",
                "attempt": 1,
                "correct": true,
                "directions": "Rewrite the sentence. Correct each bold word.",
                "id": 664,
                "lastFeedback": null,
                "name": "Plural vs. Possessive Nouns",
              },
            ],
            "directions": "Rewrite the sentence. Correct each bold word.",
            "prompt": "The city best restaurant opened twenty year ago.",
            "question_number": 8,
            "score": 100,
          },
          Object {
            "answer": "The basketball player's goal is to score point at all of her games this year.",
            "concepts": Array [
              Object {
                "answer": "The basketball player's goal is to score point at all of her games this year.",
                "attempt": 1,
                "correct": false,
                "directions": "Rewrite the sentence. Correct each bold word.",
                "id": 664,
                "lastFeedback": null,
                "name": "Plural vs. Possessive Nouns",
              },
            ],
            "directions": "Rewrite the sentence. Correct each bold word.",
            "prompt": "The basketball player goal is to score point at all of her game this year.",
            "question_number": 9,
            "score": 0,
          },
          Object {
            "answer": "Omar was born in Denver on Christmas.",
            "concepts": Array [
              Object {
                "answer": "Omar was born in Denver on Christmas.",
                "attempt": 1,
                "correct": true,
                "directions": "Rewrite the sentence with the correct capitalization",
                "id": 524,
                "lastFeedback": null,
                "name": "Capitalization",
              },
            ],
            "directions": "Rewrite the sentence with the correct capitalization",
            "prompt": "omar was born in denver on christmas.",
            "question_number": 10,
            "score": 100,
          },
          Object {
            "answer": "In March, I went to Florida",
            "concepts": Array [
              Object {
                "answer": "In March, I went to Florida",
                "attempt": 1,
                "correct": true,
                "directions": "Rewrite the sentence with the correct capitalization.",
                "id": 524,
                "lastFeedback": null,
                "name": "Capitalization",
              },
            ],
            "directions": "Rewrite the sentence with the correct capitalization.",
            "prompt": "in march, i went to florida.",
            "question_number": 11,
            "score": 100,
          },
          Object {
            "answer": "The sailor breathes in the salty air.",
            "concepts": Array [
              Object {
                "answer": "The sailor breathes in the salty air.",
                "attempt": 1,
                "correct": true,
                "directions": "Combine the sentences into one sentence. Do not add any new words.",
                "id": 385,
                "lastFeedback": null,
                "name": "Single Adjectives",
              },
            ],
            "directions": "Combine the sentences into one sentence. Do not add any new words.",
            "prompt": "The sailor breathes in the air. The air is salty.",
            "question_number": 12,
            "score": 100,
          },
          Object {
            "answer": "Lindsey quicky eats an apple and throws it away.",
            "concepts": Array [
              Object {
                "answer": "Lindsey quicky eats an apple and throws it away.",
                "attempt": 1,
                "correct": false,
                "directions": "Combine the sentences into one sentence.",
                "id": 488,
                "lastFeedback": null,
                "name": "Adverbs of Manner",
              },
            ],
            "directions": "Combine the sentences into one sentence.",
            "prompt": "Lindsey eats an apple and throws it away.She eats quickly.",
            "question_number": 13,
            "score": 0,
          },
          Object {
            "answer": "The white ice melts slowly in spring.",
            "concepts": Array [
              Object {
                "answer": "The white ice melts slowly in spring.",
                "attempt": 1,
                "correct": true,
                "directions": "Combine the sentences into one sentence. Do not add any new words.",
                "id": 551,
                "lastFeedback": null,
                "name": "Adjectives & Adverbs",
              },
            ],
            "directions": "Combine the sentences into one sentence. Do not add any new words.",
            "prompt": "The ice melts in spring. The ice is white. The ice melts slowly.",
            "question_number": 14,
            "score": 100,
          },
          Object {
            "answer": "The wind blows through the house and breaks two windows.",
            "concepts": Array [
              Object {
                "answer": "The wind blows through the house and breaks two windows.",
                "attempt": 1,
                "correct": true,
                "directions": "Combine the sentences into one sentence. Do not add any new words.",
                "id": 239,
                "lastFeedback": null,
                "name": "Prepositional Phrases",
              },
            ],
            "directions": "Combine the sentences into one sentence. Do not add any new words.",
            "prompt": "The wind blows and breaks two windows. It blows through the house.",
            "question_number": 15,
            "score": 100,
          },
          Object {
            "answer": "He is planting trees at the large park in California.",
            "concepts": Array [
              Object {
                "answer": "He is planting trees at the large park in California.",
                "attempt": 1,
                "correct": true,
                "directions": "Combine the sentences into one sentence.",
                "id": 671,
                "lastFeedback": null,
                "name": "Adjectives, Adverbs, & Prepositional Phrases",
              },
            ],
            "directions": "Combine the sentences into one sentence.",
            "prompt": "He is planting trees. He is planting them at a park. The park is large. The park is in California.",
            "question_number": 16,
            "score": 100,
          },
          Object {
            "answer": "It is another warm, rainy day in July.",
            "concepts": Array [
              Object {
                "answer": "It is another warm, rainy day in July.",
                "attempt": 1,
                "correct": true,
                "directions": "Combine the sentences into one sentence.  Do not add any new words.",
                "id": 640,
                "lastFeedback": null,
                "name": "Two Coordinate Adjectives before a Noun",
              },
            ],
            "directions": "Combine the sentences into one sentence.  Do not add any new words.",
            "prompt": "It is another warm day in July.It is another rainy day in July.",
            "question_number": 17,
            "score": 100,
          },
          Object {
            "answer": "the ifwe mwojew weofjwoew wiefjowe j",
            "concepts": Array [
              Object {
                "answer": "the ifwe mwojew weofjwoew wiefjowe j",
                "attempt": 1,
                "correct": false,
                "directions": "Combine the sentences into one sentence.",
                "id": 641,
                "lastFeedback": null,
                "name": "Two Cumulative Adjectives before a Noun",
              },
            ],
            "directions": "Combine the sentences into one sentence.",
            "prompt": "The turtle swims in the water. The turtle is green. It is a sea turtle.",
            "question_number": 18,
            "score": 0,
          },
          Object {
            "answer": "wefiow jefwio w ejfwow ejf owiowi ejwo",
            "concepts": Array [
              Object {
                "answer": "wefiow jefwio w ejfwow ejf owiowi ejwo",
                "attempt": 1,
                "correct": false,
                "directions": "Combine the sentences into one sentence.",
                "id": 508,
                "lastFeedback": null,
                "name": "Compound Predicates",
              },
            ],
            "directions": "Combine the sentences into one sentence.",
            "prompt": "Ants find food. Ants bring it back to the colony.",
            "question_number": 19,
            "score": 0,
          },
          Object {
            "answer": "ieoofw ie iofjweio fe jwo",
            "concepts": Array [
              Object {
                "answer": "ieoofw ie iofjweio fe jwo",
                "attempt": 1,
                "correct": false,
                "directions": "Combine the sentences into one sentence.",
                "id": 506,
                "lastFeedback": null,
                "name": "Compound Subjects",
              },
            ],
            "directions": "Combine the sentences into one sentence.",
            "prompt": "The teacher is reading.The student is reading.",
            "question_number": 20,
            "score": 0,
          },
          Object {
            "answer": "efjowie. ifjwoieiej woje iw ojeoiwje",
            "concepts": Array [
              Object {
                "answer": "efjowie. ifjwoieiej woje iw ojeoiwje",
                "attempt": 1,
                "correct": false,
                "directions": "Combine the sentences into one sentence.",
                "id": 566,
                "lastFeedback": null,
                "name": "Listing Objects",
              },
            ],
            "directions": "Combine the sentences into one sentence.",
            "prompt": "Flan is a dessert made with sugar. Flan is a dessert made with evaporated milk. Flan is a dessert made with eggs.",
            "question_number": 21,
            "score": 0,
          },
        ],
      },
      "pre": Object {
        "questions": Array [
          Object {
            "answer": "He don't like to wake up early.",
            "concepts": Array [
              Object {
                "answer": "He don't like to wake up early.",
                "attempt": 1,
                "correct": false,
                "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Doesn't, Don't)",
                "id": 450,
                "lastFeedback": null,
                "name": "Subject Verb Agreement",
              },
            ],
            "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Doesn't, Don't)",
            "prompt": "He ___ like to wake up early.",
            "question_number": 1,
            "score": 0,
          },
          Object {
            "answer": "The players on the field kick the ball.",
            "concepts": Array [
              Object {
                "answer": "The players on the field kick the ball.",
                "attempt": 1,
                "correct": true,
                "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Kicks, Kick)",
                "id": 450,
                "lastFeedback": null,
                "name": "Subject Verb Agreement",
              },
            ],
            "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Kicks, Kick)",
            "prompt": "The players on the field ___ the ball.",
            "question_number": 2,
            "score": 100,
          },
          Object {
            "answer": "The streets of Tokyo are bright.",
            "concepts": Array [
              Object {
                "answer": "The streets of Tokyo are bright.",
                "attempt": 1,
                "correct": true,
                "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Are, Is)",
                "id": 450,
                "lastFeedback": null,
                "name": "Subject Verb Agreement",
              },
            ],
            "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Are, Is)",
            "prompt": "The streets of Tokyo ___ bright.",
            "question_number": 3,
            "score": 100,
          },
          Object {
            "answer": "I’ll watch a movie at your house while your studying.",
            "concepts": Array [
              Object {
                "answer": "I’ll watch a movie at your house while your studying.",
                "attempt": 1,
                "correct": false,
                "directions": "Choose which word fits best in each blank. You may use the same word twice. (You're, Your)",
                "id": 673,
                "lastFeedback": null,
                "name": "Commonly Confused Words",
              },
            ],
            "directions": "Choose which word fits best in each blank. You may use the same word twice. (You're, Your)",
            "prompt": "I’ll watch a movie at ___ house while ___ studying.",
            "question_number": 4,
            "score": 0,
          },
          Object {
            "answer": "Runners stretch their legs while they're waiting for the race to start.",
            "concepts": Array [
              Object {
                "answer": "Runners stretch their legs while they're waiting for the race to start.",
                "attempt": 1,
                "correct": true,
                "directions": "Choose which word fits best in each blank. You may use the same word twice. (They’re, There, Their)",
                "id": 673,
                "lastFeedback": null,
                "name": "Commonly Confused Words",
              },
            ],
            "directions": "Choose which word fits best in each blank. You may use the same word twice. (They’re, There, Their)",
            "prompt": "Runners stretch ___ legs while ___ waiting for the race to start.",
            "question_number": 5,
            "score": 100,
          },
          Object {
            "answer": "Traveling is easier with a guide than without one.",
            "concepts": Array [
              Object {
                "answer": "Traveling is easier with a guide than without one.",
                "attempt": 1,
                "correct": true,
                "directions": "Fill in the blank with the correct word or words. (More easier, More easy, Easiest, Easier)",
                "id": 83,
                "lastFeedback": null,
                "name": "Comparative Adjectives",
              },
            ],
            "directions": "Fill in the blank with the correct word or words. (More easier, More easy, Easiest, Easier)",
            "prompt": "Traveling is ___ with a guide than without one.",
            "question_number": 6,
            "score": 100,
          },
          Object {
            "answer": "Stars look brighter in the country than in the city.",
            "concepts": Array [
              Object {
                "answer": "Stars look brighter in the country than in the city.",
                "attempt": 1,
                "correct": true,
                "directions": "Fill in the blank with the correct word or words. (More brighter, More bright, Brightest, Brighter)",
                "id": 83,
                "lastFeedback": null,
                "name": "Comparative Adjectives",
              },
            ],
            "directions": "Fill in the blank with the correct word or words. (More brighter, More bright, Brightest, Brighter)",
            "prompt": "Stars look ___ in the country than in the city.",
            "question_number": 7,
            "score": 100,
          },
          Object {
            "answer": "family's years",
            "concepts": Array [
              Object {
                "answer": "family's years",
                "attempt": 1,
                "correct": false,
                "directions": "Rewrite the sentence. Correct each bold word.",
                "id": 664,
                "lastFeedback": null,
                "name": "Plural vs. Possessive Nouns",
              },
            ],
            "directions": "Rewrite the sentence. Correct each bold word.",
            "prompt": "The family big house was built a hundred year ago.",
            "question_number": 8,
            "score": 0,
          },
          Object {
            "answer": "athlete's medals competitions",
            "concepts": Array [
              Object {
                "answer": "athlete's medals competitions",
                "attempt": 1,
                "correct": true,
                "directions": "Rewrite the sentence. Correct each bold word.",
                "id": 664,
                "lastFeedback": null,
                "name": "Plural vs. Possessive Nouns",
              },
            ],
            "directions": "Rewrite the sentence. Correct each bold word.",
            "prompt": "The athlete goal is to win medal at all of her competition this season.",
            "question_number": 9,
            "score": 100,
          },
          Object {
            "answer": "Xavier Pittsburgh Halloween",
            "concepts": Array [
              Object {
                "answer": "Xavier Pittsburgh Halloween",
                "attempt": 1,
                "correct": false,
                "directions": "Rewrite the sentence with the correct capitalization.",
                "id": 524,
                "lastFeedback": null,
                "name": "Capitalization",
              },
            ],
            "directions": "Rewrite the sentence with the correct capitalization.",
            "prompt": "xavier was born in pittsburgh on halloween.",
            "question_number": 10,
            "score": 0,
          },
          Object {
            "answer": "In January I went to Montatna",
            "concepts": Array [
              Object {
                "answer": "In January I went to Montatna",
                "attempt": 1,
                "correct": true,
                "directions": "Rewrite the sentence with the correct capitalization.",
                "id": 524,
                "lastFeedback": null,
                "name": "Capitalization",
              },
            ],
            "directions": "Rewrite the sentence with the correct capitalization.",
            "prompt": "in january, i went to montana.",
            "question_number": 11,
            "score": 100,
          },
          Object {
            "answer": "Scorpions thrive in the dry desert.",
            "concepts": Array [
              Object {
                "answer": "Scorpions thrive in the dry desert.",
                "attempt": 1,
                "correct": true,
                "directions": "Combine the sentences into one sentence. Do not add any new words.",
                "id": 385,
                "lastFeedback": null,
                "name": "Single Adjectives",
              },
            ],
            "directions": "Combine the sentences into one sentence. Do not add any new words.",
            "prompt": "Scorpions thrive in the desert. The desert is dry. ",
            "question_number": 12,
            "score": 100,
          },
          Object {
            "answer": "",
            "concepts": Array [
              Object {
                "answer": "",
                "attempt": 1,
                "correct": false,
                "directions": " Combine the sentences into one sentence.",
                "id": 488,
                "lastFeedback": null,
                "name": "Adverbs of Manner",
              },
            ],
            "directions": " Combine the sentences into one sentence.",
            "prompt": "Rico writes a letter and mails it. He writes quickly.",
            "question_number": 13,
            "score": 0,
          },
          Object {
            "answer": "The muddy stream floods easily during rainstorms",
            "concepts": Array [
              Object {
                "answer": "The muddy stream floods easily during rainstorms",
                "attempt": 1,
                "correct": true,
                "directions": "Combine the sentences into one sentence. Do not add any new words.",
                "id": 551,
                "lastFeedback": null,
                "name": "Adjectives & Adverbs",
              },
            ],
            "directions": "Combine the sentences into one sentence. Do not add any new words.",
            "prompt": "The stream floods during rainstorms. The stream is muddy. The stream floods easily.",
            "question_number": 14,
            "score": 100,
          },
          Object {
            "answer": "A tree fell onto the road and blocked traffic.",
            "concepts": Array [
              Object {
                "answer": "A tree fell onto the road and blocked traffic.",
                "attempt": 1,
                "correct": true,
                "directions": "Combine the sentences into one sentence. Do not add any new words.",
                "id": 239,
                "lastFeedback": null,
                "name": "Prepositional Phrases",
              },
            ],
            "directions": "Combine the sentences into one sentence. Do not add any new words.",
            "prompt": "A tree fell and blocked traffic. It fell onto the road.",
            "question_number": 15,
            "score": 100,
          },
          Object {
            "answer": "He is going on vacation to a beautiful beach in San Diego",
            "concepts": Array [
              Object {
                "answer": "He is going on vacation to a beautiful beach in San Diego",
                "attempt": 1,
                "correct": true,
                "directions": "Combine the sentences into one sentence.",
                "id": 671,
                "lastFeedback": null,
                "name": "Adjectives, Adverbs, & Prepositional Phrases",
              },
            ],
            "directions": "Combine the sentences into one sentence.",
            "prompt": "He is going on vacation. He is going to a beach. The beach is beautiful. The beach is in San Diego. ",
            "question_number": 16,
            "score": 100,
          },
          Object {
            "answer": "It is another cold, windy day in Seattle",
            "concepts": Array [
              Object {
                "answer": "It is another cold, windy day in Seattle",
                "attempt": 1,
                "correct": true,
                "directions": "Combine the sentences into one sentence. Do not add any new words.",
                "id": 640,
                "lastFeedback": null,
                "name": "Two Coordinate Adjectives before a Noun",
              },
            ],
            "directions": "Combine the sentences into one sentence. Do not add any new words.",
            "prompt": "It is another cold day in Seattle. It is another windy day in Seattle.",
            "question_number": 17,
            "score": 100,
          },
          Object {
            "answer": "The white polar bear stands on the ice",
            "concepts": Array [
              Object {
                "answer": "The white polar bear stands on the ice",
                "attempt": 1,
                "correct": true,
                "directions": "Combine the sentences into one sentence.",
                "id": 641,
                "lastFeedback": null,
                "name": "Two Cumulative Adjectives before a Noun",
              },
            ],
            "directions": "Combine the sentences into one sentence.",
            "prompt": "The bear stands on the ice.The bear is white.It is a polar bear.",
            "question_number": 18,
            "score": 100,
          },
          Object {
            "answer": "Bees collet pollenan d carry sbac",
            "concepts": Array [
              Object {
                "answer": "Bees collet pollenan d carry sbac",
                "attempt": 1,
                "correct": false,
                "directions": "Combine the sentences into one sentence.",
                "id": 508,
                "lastFeedback": null,
                "name": "Compound Predicates",
              },
            ],
            "directions": "Combine the sentences into one sentence.",
            "prompt": "Bees collect pollen. Bees carry it back to the hive.",
            "question_number": 19,
            "score": 0,
          },
          Object {
            "answer": "The cat and dog is sleepi9jng",
            "concepts": Array [
              Object {
                "answer": "The cat and dog is sleepi9jng",
                "attempt": 1,
                "correct": false,
                "directions": "Combine the sentences into one sentence.",
                "id": 506,
                "lastFeedback": null,
                "name": "Compound Subjects",
              },
            ],
            "directions": "Combine the sentences into one sentence.",
            "prompt": "The cat is sleeping. The dog is sleeping.",
            "question_number": 20,
            "score": 0,
          },
          Object {
            "answer": "herbs, bone broth, and noodles",
            "concepts": Array [
              Object {
                "answer": "herbs, bone broth, and noodles",
                "attempt": 1,
                "correct": true,
                "directions": "Combine the sentences into one sentence.",
                "id": 566,
                "lastFeedback": null,
                "name": "Listing Objects",
              },
            ],
            "directions": "Combine the sentences into one sentence.",
            "prompt": "Pho is a soup made with herbs. Pho is a soup made with bone broth. Pho is a soup made with noodles.",
            "question_number": 21,
            "score": 100,
          },
        ],
      },
    }
  }
  passedSkillResults={
    Object {
      "skills": Array [
        Object {
          "post": Object {
            "id": 125,
            "number_correct": 1,
            "number_incorrect": 0,
            "skill": "Adjectives and Adverbs",
            "summary": "Fully correct",
          },
          "pre": Object {
            "id": 125,
            "number_correct": 1,
            "number_incorrect": 0,
            "skill": "Adjectives and Adverbs",
            "summary": "Fully correct",
          },
        },
        Object {
          "post": Object {
            "id": 128,
            "number_correct": 1,
            "number_incorrect": 0,
            "skill": "Adjectives, Adverbs, & Prepositional Phrases",
            "summary": "Fully correct",
          },
          "pre": Object {
            "id": 128,
            "number_correct": 1,
            "number_incorrect": 0,
            "skill": "Adjectives, Adverbs, & Prepositional Phrases",
            "summary": "Fully correct",
          },
        },
        Object {
          "post": Object {
            "id": 120,
            "number_correct": 0,
            "number_incorrect": 1,
            "skill": "Adverbs of Manner",
            "summary": "Not correct",
          },
          "pre": Object {
            "id": 120,
            "number_correct": 0,
            "number_incorrect": 1,
            "skill": "Adverbs of Manner",
            "summary": "Not correct",
          },
        },
        Object {
          "post": Object {
            "id": 118,
            "number_correct": 2,
            "number_incorrect": 0,
            "skill": "Capitalization",
            "summary": "Fully correct",
          },
          "pre": Object {
            "id": 118,
            "number_correct": 1,
            "number_incorrect": 1,
            "skill": "Capitalization",
            "summary": "Partially correct",
          },
        },
        Object {
          "post": Object {
            "id": 133,
            "number_correct": 2,
            "number_incorrect": 0,
            "skill": "Commonly Confused Words",
            "summary": "Fully correct",
          },
          "pre": Object {
            "id": 133,
            "number_correct": 1,
            "number_incorrect": 1,
            "skill": "Commonly Confused Words",
            "summary": "Partially correct",
          },
        },
        Object {
          "post": Object {
            "id": 122,
            "number_correct": 2,
            "number_incorrect": 0,
            "skill": "Comparative Adjectives",
            "summary": "Fully correct",
          },
          "pre": Object {
            "id": 122,
            "number_correct": 2,
            "number_incorrect": 0,
            "skill": "Comparative Adjectives",
            "summary": "Fully correct",
          },
        },
        Object {
          "post": Object {
            "id": 132,
            "number_correct": 0,
            "number_incorrect": 1,
            "skill": "Compound Predicates",
            "summary": "Not correct",
          },
          "pre": Object {
            "id": 132,
            "number_correct": 0,
            "number_incorrect": 1,
            "skill": "Compound Predicates",
            "summary": "Not correct",
          },
        },
        Object {
          "post": Object {
            "id": 131,
            "number_correct": 0,
            "number_incorrect": 1,
            "skill": "Compound Subjects",
            "summary": "Not correct",
          },
          "pre": Object {
            "id": 131,
            "number_correct": 0,
            "number_incorrect": 1,
            "skill": "Compound Subjects",
            "summary": "Not correct",
          },
        },
        Object {
          "post": Object {
            "id": 123,
            "number_correct": 1,
            "number_incorrect": 0,
            "skill": "Coordinate Adjectives",
            "summary": "Fully correct",
          },
          "pre": Object {
            "id": 123,
            "number_correct": 1,
            "number_incorrect": 0,
            "skill": "Coordinate Adjectives",
            "summary": "Fully correct",
          },
        },
        Object {
          "post": Object {
            "id": 124,
            "number_correct": 0,
            "number_incorrect": 1,
            "skill": "Cumulative Adjectives",
            "summary": "Not correct",
          },
          "pre": Object {
            "id": 124,
            "number_correct": 1,
            "number_incorrect": 0,
            "skill": "Cumulative Adjectives",
            "summary": "Fully correct",
          },
        },
        Object {
          "post": Object {
            "id": 130,
            "number_correct": 0,
            "number_incorrect": 1,
            "skill": "Listing Objects",
            "summary": "Not correct",
          },
          "pre": Object {
            "id": 130,
            "number_correct": 1,
            "number_incorrect": 0,
            "skill": "Listing Objects",
            "summary": "Fully correct",
          },
        },
        Object {
          "post": Object {
            "id": 119,
            "number_correct": 1,
            "number_incorrect": 1,
            "skill": "Plural vs. Possessive Nouns",
            "summary": "Partially correct",
          },
          "pre": Object {
            "id": 119,
            "number_correct": 1,
            "number_incorrect": 1,
            "skill": "Plural vs. Possessive Nouns",
            "summary": "Partially correct",
          },
        },
        Object {
          "post": Object {
            "id": 127,
            "number_correct": 1,
            "number_incorrect": 0,
            "skill": "Prepositional Phrases",
            "summary": "Fully correct",
          },
          "pre": Object {
            "id": 127,
            "number_correct": 1,
            "number_incorrect": 0,
            "skill": "Prepositional Phrases",
            "summary": "Fully correct",
          },
        },
        Object {
          "post": Object {
            "id": 121,
            "number_correct": 1,
            "number_incorrect": 0,
            "skill": "Single Adjectives",
            "summary": "Fully correct",
          },
          "pre": Object {
            "id": 121,
            "number_correct": 1,
            "number_incorrect": 0,
            "skill": "Single Adjectives",
            "summary": "Fully correct",
          },
        },
        Object {
          "post": Object {
            "id": 126,
            "number_correct": 3,
            "number_incorrect": 0,
            "skill": "Subject-Verb Agreement",
            "summary": "Fully correct",
          },
          "pre": Object {
            "id": 126,
            "number_correct": 2,
            "number_incorrect": 1,
            "skill": "Subject-Verb Agreement",
            "summary": "Partially correct",
          },
        },
      ],
    }
  }
>
  <_default>
    <div
      className="spinner-container"
    >
      <img
        alt=""
        className="spinner"
        src="/images/loader_still.svg"
      />
    </div>
  </_default>
</IndividualStudentResponses>
`;

exports[`IndividualStudentResponses component should render for a pre-test 1`] = `
<IndividualStudentResponses
  location={
    Object {
      "search": "",
    }
  }
  match={
    Object {
      "params": Object {
        "activityId": 0,
        "classroomId": 6,
      },
    }
  }
  mobileNavigation={<span />}
  passedConceptResults={
    Object {
      "questions": Array [
        Object {
          "answer": "He don't like to wake up early.",
          "concepts": Array [
            Object {
              "answer": "He don't like to wake up early.",
              "attempt": 1,
              "correct": false,
              "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Doesn't, Don't)",
              "id": 450,
              "lastFeedback": null,
              "name": "Subject Verb Agreement",
            },
          ],
          "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Doesn't, Don't)",
          "prompt": "He ___ like to wake up early.",
          "question_number": 1,
          "score": 0,
        },
        Object {
          "answer": "The players on the field kick the ball.",
          "concepts": Array [
            Object {
              "answer": "The players on the field kick the ball.",
              "attempt": 1,
              "correct": true,
              "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Kicks, Kick)",
              "id": 450,
              "lastFeedback": null,
              "name": "Subject Verb Agreement",
            },
          ],
          "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Kicks, Kick)",
          "prompt": "The players on the field ___ the ball.",
          "question_number": 2,
          "score": 100,
        },
        Object {
          "answer": "The streets of Tokyo are bright.",
          "concepts": Array [
            Object {
              "answer": "The streets of Tokyo are bright.",
              "attempt": 1,
              "correct": true,
              "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Are, Is)",
              "id": 450,
              "lastFeedback": null,
              "name": "Subject Verb Agreement",
            },
          ],
          "directions": "Fill in the blank with the action word that matches the rest of the sentence. (Are, Is)",
          "prompt": "The streets of Tokyo ___ bright.",
          "question_number": 3,
          "score": 100,
        },
        Object {
          "answer": "I’ll watch a movie at your house while your studying.",
          "concepts": Array [
            Object {
              "answer": "I’ll watch a movie at your house while your studying.",
              "attempt": 1,
              "correct": false,
              "directions": "Choose which word fits best in each blank. You may use the same word twice. (You're, Your)",
              "id": 673,
              "lastFeedback": null,
              "name": "Commonly Confused Words",
            },
          ],
          "directions": "Choose which word fits best in each blank. You may use the same word twice. (You're, Your)",
          "prompt": "I’ll watch a movie at ___ house while ___ studying.",
          "question_number": 4,
          "score": 0,
        },
        Object {
          "answer": "Runners stretch their legs while they're waiting for the race to start.",
          "concepts": Array [
            Object {
              "answer": "Runners stretch their legs while they're waiting for the race to start.",
              "attempt": 1,
              "correct": true,
              "directions": "Choose which word fits best in each blank. You may use the same word twice. (They’re, There, Their)",
              "id": 673,
              "lastFeedback": null,
              "name": "Commonly Confused Words",
            },
          ],
          "directions": "Choose which word fits best in each blank. You may use the same word twice. (They’re, There, Their)",
          "prompt": "Runners stretch ___ legs while ___ waiting for the race to start.",
          "question_number": 5,
          "score": 100,
        },
        Object {
          "answer": "Traveling is easier with a guide than without one.",
          "concepts": Array [
            Object {
              "answer": "Traveling is easier with a guide than without one.",
              "attempt": 1,
              "correct": true,
              "directions": "Fill in the blank with the correct word or words. (More easier, More easy, Easiest, Easier)",
              "id": 83,
              "lastFeedback": null,
              "name": "Comparative Adjectives",
            },
          ],
          "directions": "Fill in the blank with the correct word or words. (More easier, More easy, Easiest, Easier)",
          "prompt": "Traveling is ___ with a guide than without one.",
          "question_number": 6,
          "score": 100,
        },
        Object {
          "answer": "Stars look brighter in the country than in the city.",
          "concepts": Array [
            Object {
              "answer": "Stars look brighter in the country than in the city.",
              "attempt": 1,
              "correct": true,
              "directions": "Fill in the blank with the correct word or words. (More brighter, More bright, Brightest, Brighter)",
              "id": 83,
              "lastFeedback": null,
              "name": "Comparative Adjectives",
            },
          ],
          "directions": "Fill in the blank with the correct word or words. (More brighter, More bright, Brightest, Brighter)",
          "prompt": "Stars look ___ in the country than in the city.",
          "question_number": 7,
          "score": 100,
        },
        Object {
          "answer": "family's years",
          "concepts": Array [
            Object {
              "answer": "family's years",
              "attempt": 1,
              "correct": false,
              "directions": "Rewrite the sentence. Correct each bold word.",
              "id": 664,
              "lastFeedback": null,
              "name": "Plural vs. Possessive Nouns",
            },
          ],
          "directions": "Rewrite the sentence. Correct each bold word.",
          "prompt": "The family big house was built a hundred year ago.",
          "question_number": 8,
          "score": 0,
        },
        Object {
          "answer": "athlete's medals competitions",
          "concepts": Array [
            Object {
              "answer": "athlete's medals competitions",
              "attempt": 1,
              "correct": true,
              "directions": "Rewrite the sentence. Correct each bold word.",
              "id": 664,
              "lastFeedback": null,
              "name": "Plural vs. Possessive Nouns",
            },
          ],
          "directions": "Rewrite the sentence. Correct each bold word.",
          "prompt": "The athlete goal is to win medal at all of her competition this season.",
          "question_number": 9,
          "score": 100,
        },
        Object {
          "answer": "Xavier Pittsburgh Halloween",
          "concepts": Array [
            Object {
              "answer": "Xavier Pittsburgh Halloween",
              "attempt": 1,
              "correct": false,
              "directions": "Rewrite the sentence with the correct capitalization.",
              "id": 524,
              "lastFeedback": null,
              "name": "Capitalization",
            },
          ],
          "directions": "Rewrite the sentence with the correct capitalization.",
          "prompt": "xavier was born in pittsburgh on halloween.",
          "question_number": 10,
          "score": 0,
        },
        Object {
          "answer": "In January I went to Montatna",
          "concepts": Array [
            Object {
              "answer": "In January I went to Montatna",
              "attempt": 1,
              "correct": true,
              "directions": "Rewrite the sentence with the correct capitalization.",
              "id": 524,
              "lastFeedback": null,
              "name": "Capitalization",
            },
          ],
          "directions": "Rewrite the sentence with the correct capitalization.",
          "prompt": "in january, i went to montana.",
          "question_number": 11,
          "score": 100,
        },
        Object {
          "answer": "Scorpions thrive in the dry desert.",
          "concepts": Array [
            Object {
              "answer": "Scorpions thrive in the dry desert.",
              "attempt": 1,
              "correct": true,
              "directions": "Combine the sentences into one sentence. Do not add any new words.",
              "id": 385,
              "lastFeedback": null,
              "name": "Single Adjectives",
            },
          ],
          "directions": "Combine the sentences into one sentence. Do not add any new words.",
          "prompt": "Scorpions thrive in the desert. The desert is dry. ",
          "question_number": 12,
          "score": 100,
        },
        Object {
          "answer": "",
          "concepts": Array [
            Object {
              "answer": "",
              "attempt": 1,
              "correct": false,
              "directions": " Combine the sentences into one sentence.",
              "id": 488,
              "lastFeedback": null,
              "name": "Adverbs of Manner",
            },
          ],
          "directions": " Combine the sentences into one sentence.",
          "prompt": "Rico writes a letter and mails it. He writes quickly.",
          "question_number": 13,
          "score": 0,
        },
        Object {
          "answer": "The muddy stream floods easily during rainstorms",
          "concepts": Array [
            Object {
              "answer": "The muddy stream floods easily during rainstorms",
              "attempt": 1,
              "correct": true,
              "directions": "Combine the sentences into one sentence. Do not add any new words.",
              "id": 551,
              "lastFeedback": null,
              "name": "Adjectives & Adverbs",
            },
          ],
          "directions": "Combine the sentences into one sentence. Do not add any new words.",
          "prompt": "The stream floods during rainstorms. The stream is muddy. The stream floods easily.",
          "question_number": 14,
          "score": 100,
        },
        Object {
          "answer": "A tree fell onto the road and blocked traffic.",
          "concepts": Array [
            Object {
              "answer": "A tree fell onto the road and blocked traffic.",
              "attempt": 1,
              "correct": true,
              "directions": "Combine the sentences into one sentence. Do not add any new words.",
              "id": 239,
              "lastFeedback": null,
              "name": "Prepositional Phrases",
            },
          ],
          "directions": "Combine the sentences into one sentence. Do not add any new words.",
          "prompt": "A tree fell and blocked traffic. It fell onto the road.",
          "question_number": 15,
          "score": 100,
        },
        Object {
          "answer": "He is going on vacation to a beautiful beach in San Diego",
          "concepts": Array [
            Object {
              "answer": "He is going on vacation to a beautiful beach in San Diego",
              "attempt": 1,
              "correct": true,
              "directions": "Combine the sentences into one sentence.",
              "id": 671,
              "lastFeedback": null,
              "name": "Adjectives, Adverbs, & Prepositional Phrases",
            },
          ],
          "directions": "Combine the sentences into one sentence.",
          "prompt": "He is going on vacation. He is going to a beach. The beach is beautiful. The beach is in San Diego. ",
          "question_number": 16,
          "score": 100,
        },
        Object {
          "answer": "It is another cold, windy day in Seattle",
          "concepts": Array [
            Object {
              "answer": "It is another cold, windy day in Seattle",
              "attempt": 1,
              "correct": true,
              "directions": "Combine the sentences into one sentence. Do not add any new words.",
              "id": 640,
              "lastFeedback": null,
              "name": "Two Coordinate Adjectives before a Noun",
            },
          ],
          "directions": "Combine the sentences into one sentence. Do not add any new words.",
          "prompt": "It is another cold day in Seattle. It is another windy day in Seattle.",
          "question_number": 17,
          "score": 100,
        },
        Object {
          "answer": "The white polar bear stands on the ice",
          "concepts": Array [
            Object {
              "answer": "The white polar bear stands on the ice",
              "attempt": 1,
              "correct": true,
              "directions": "Combine the sentences into one sentence.",
              "id": 641,
              "lastFeedback": null,
              "name": "Two Cumulative Adjectives before a Noun",
            },
          ],
          "directions": "Combine the sentences into one sentence.",
          "prompt": "The bear stands on the ice.The bear is white.It is a polar bear.",
          "question_number": 18,
          "score": 100,
        },
        Object {
          "answer": "Bees collet pollenan d carry sbac",
          "concepts": Array [
            Object {
              "answer": "Bees collet pollenan d carry sbac",
              "attempt": 1,
              "correct": false,
              "directions": "Combine the sentences into one sentence.",
              "id": 508,
              "lastFeedback": null,
              "name": "Compound Predicates",
            },
          ],
          "directions": "Combine the sentences into one sentence.",
          "prompt": "Bees collect pollen. Bees carry it back to the hive.",
          "question_number": 19,
          "score": 0,
        },
        Object {
          "answer": "The cat and dog is sleepi9jng",
          "concepts": Array [
            Object {
              "answer": "The cat and dog is sleepi9jng",
              "attempt": 1,
              "correct": false,
              "directions": "Combine the sentences into one sentence.",
              "id": 506,
              "lastFeedback": null,
              "name": "Compound Subjects",
            },
          ],
          "directions": "Combine the sentences into one sentence.",
          "prompt": "The cat is sleeping. The dog is sleeping.",
          "question_number": 20,
          "score": 0,
        },
        Object {
          "answer": "herbs, bone broth, and noodles",
          "concepts": Array [
            Object {
              "answer": "herbs, bone broth, and noodles",
              "attempt": 1,
              "correct": true,
              "directions": "Combine the sentences into one sentence.",
              "id": 566,
              "lastFeedback": null,
              "name": "Listing Objects",
            },
          ],
          "directions": "Combine the sentences into one sentence.",
          "prompt": "Pho is a soup made with herbs. Pho is a soup made with bone broth. Pho is a soup made with noodles.",
          "question_number": 21,
          "score": 100,
        },
      ],
    }
  }
  passedSkillResults={
    Object {
      "skills": Array [
        Object {
          "id": 125,
          "number_correct": 1,
          "number_incorrect": 0,
          "skill": "Adjectives and Adverbs",
          "summary": "Fully correct",
        },
        Object {
          "id": 128,
          "number_correct": 1,
          "number_incorrect": 0,
          "skill": "Adjectives, Adverbs, & Prepositional Phrases",
          "summary": "Fully correct",
        },
        Object {
          "id": 120,
          "number_correct": 0,
          "number_incorrect": 1,
          "skill": "Adverbs of Manner",
          "summary": "Not correct",
        },
        Object {
          "id": 118,
          "number_correct": 1,
          "number_incorrect": 1,
          "skill": "Capitalization",
          "summary": "Partially correct",
        },
        Object {
          "id": 133,
          "number_correct": 1,
          "number_incorrect": 1,
          "skill": "Commonly Confused Words",
          "summary": "Partially correct",
        },
        Object {
          "id": 122,
          "number_correct": 2,
          "number_incorrect": 0,
          "skill": "Comparative Adjectives",
          "summary": "Fully correct",
        },
        Object {
          "id": 132,
          "number_correct": 0,
          "number_incorrect": 1,
          "skill": "Compound Predicates",
          "summary": "Not correct",
        },
        Object {
          "id": 131,
          "number_correct": 0,
          "number_incorrect": 1,
          "skill": "Compound Subjects",
          "summary": "Not correct",
        },
        Object {
          "id": 123,
          "number_correct": 1,
          "number_incorrect": 0,
          "skill": "Coordinate Adjectives",
          "summary": "Fully correct",
        },
        Object {
          "id": 124,
          "number_correct": 1,
          "number_incorrect": 0,
          "skill": "Cumulative Adjectives",
          "summary": "Fully correct",
        },
        Object {
          "id": 130,
          "number_correct": 1,
          "number_incorrect": 0,
          "skill": "Listing Objects",
          "summary": "Fully correct",
        },
        Object {
          "id": 119,
          "number_correct": 1,
          "number_incorrect": 1,
          "skill": "Plural vs. Possessive Nouns",
          "summary": "Partially correct",
        },
        Object {
          "id": 127,
          "number_correct": 1,
          "number_incorrect": 0,
          "skill": "Prepositional Phrases",
          "summary": "Fully correct",
        },
        Object {
          "id": 121,
          "number_correct": 1,
          "number_incorrect": 0,
          "skill": "Single Adjectives",
          "summary": "Fully correct",
        },
        Object {
          "id": 126,
          "number_correct": 2,
          "number_incorrect": 1,
          "skill": "Subject-Verb Agreement",
          "summary": "Partially correct",
        },
      ],
    }
  }
>
  <_default>
    <div
      className="spinner-container"
    >
      <img
        alt=""
        className="spinner"
        src="/images/loader_still.svg"
      />
    </div>
  </_default>
</IndividualStudentResponses>
`;
